--- a/Backend/Month 01/Week 04/Day 18/package.json
+++ b/Backend/Month 01/Week 04/Day 18/package.json
@@ -1,7 +1,6 @@
 {
   "name": "day-18",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
@@ -9,8 +8,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "This is Express and MySQL"
 }
