--- a/Backend/Month 01/Week 04/Day 20/package.json
+++ b/Backend/Month 01/Week 04/Day 20/package.json
@@ -4,7 +4,8 @@
   "description": "This is sequelize",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon index.js"
   },
   "author": "",
   "license": "ISC",
