--- a/Backend/Month 01/Week 04/Day 20/package.json
+++ b/Backend/Month 01/Week 04/Day 20/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "validator": "^13.5.2"
   }
 }
