--- a/Backend/Month 02/Week 05/Day 24/.env.development
+++ b/Backend/Month 02/Week 05/Day 24/.env.development
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://darwinknowless:29Desember@cluster0.bvggs.mongodb.net/penjualan?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://darwinknowless:29Desember@cluster0.bvggs.mongodb.net/penjualan_dev_24?retryWrites=true&w=majority
