--- a/Backend/Month 02/Week 05/Day 24/package.json
+++ b/Backend/Month 02/Week 05/Day 24/package.json
@@ -1,14 +1,14 @@
 {
   "name": "day-24",
   "version": "1.0.0",
-  "description": "This is Mongoose",
+  "description": "This is mongoose",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon index.js"
+    "dev": "NODE_ENV=development nodemon index"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Reza",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
